# p3at_tutorial

./: CMakeLists.txt  package.xml
launch/: fcr_main.launch  navigation.rviz
scripts/: fake_camera.py  keyboard_input.cpp  keyboard_node.cpp  localization_node.py  map_listener.py  speed_listener.py  speed_publisher.py
src/: color_identification.cpp  keyboard_node.cpp
